<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_image">

    <LinearLayout
        android:importantForAutofill="no"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--logo-->
        <TextView
            android:text="@string/profinance"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:importantForAutofill="no"
            android:text="@string/edit_transaction"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/holo_purple"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <EditText
            android:id="@+id/etTitle"
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:layout_width="350dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="12dp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/etCategory"
            android:autofillHints="no"
            android:hint="@string/category"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="12dp" />

        <Spinner
            android:id="@+id/spinnerTransactionType"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@android:drawable/btn_dropdown"
            android:contentDescription="@string/select_transaction_type" />

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@android:drawable/btn_dropdown"
            android:contentDescription="@string/select_currency_type" />

        <EditText
            android:id="@+id/etAmount"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="12dp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/etDate"
            android:hint="@string/select_date"
            android:focusable="true"
            android:clickable="true"
            android:inputType="none"
            android:autofillHints="date"
            android:textColorHint="#8D6E63"
            android:background="#FFFFFF"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingVertical="12dp"
            android:layout_marginBottom="24dp"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/btnUpdate"
            android:text="@string/update"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
