<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/background_image">

    <!--logo-->
    <TextView
        android:text="@string/profinance"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <!--bring 3 buttons to the center-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">
    <Button
        android:id="@+id/btnTransaction"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnBudget"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/monthly_budgeting"/>
</LinearLayout>

</LinearLayout>
