<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@drawable/background_image">

    <!--logo-->
    <TextView
        android:text="@string/profinance"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transaction"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/btnAddNew"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnTransactionHistory"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_history" />
    </LinearLayout>
</LinearLayout>
