<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvPopupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvPopupDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_here"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnClosePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity="center"/>
</LinearLayout>
