<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutTransactionHistory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_image">

    <!--logo-->
    <TextView
        android:text="@string/profinance"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_history"
        android:textColor="@android:color/holo_purple"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_transactions"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/listViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:dividerHeight="1dp"
        android:divider="@color/black"/>
</LinearLayout>
